Updated images and added about text

--- a/index.html
+++ b/index.html
@@ -21,20 +21,19 @@
 			<!-- Header -->
 			<header id="header">
 				<div class="logo">
-					<span class="icon fa-diamond"></span>
+					<!-- <span class="icon fa-diamond"></span> -->
+					<span class="icon fa-eercast"></span>
 				</div>
 				<div class="content">
 					<div class="inner">
 						<h1>Lavon Stalling</h1>
 						<p>
-							Full Stack Developer
+							Full Stack Developer<br />
 							<a href="https://github.com/micah-shrak"
 								><span class="icon fa-github"></span
 							></a>
-							and released<br />
-							for free under the
-							<a href="https://html5up.net/license">Creative Commons</a>
-							license.
+							I design web and mobile applications<br />
+							Lyfe is Kode
 						</p>
 					</div>
 				</div>
@@ -55,7 +54,7 @@
 				<article id="intro">
 					<h2 class="major">Intro</h2>
 					<span class="image main"
-						><img src="images/neon_dude.jpeg" alt=""
+						><img src="images/figure_red.jpeg" alt=""
 					/></span>
 					<p>
 						Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
@@ -104,16 +103,11 @@
 				<article id="about">
 					<h2 class="major">About</h2>
 					<span class="image main"
-						><img src="images/figure_red.jpeg" alt=""
+						><img src="images/neon_dude.jpeg" alt=""
 					/></span>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
-						eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
-						erat volutpat. Praesent urna nisi, fringila lorem et vehicula
-						lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.
-						Aliquam libero et malesuada fames ac ante ipsum primis in faucibus.
-						Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit
-						amet.
+						Hi. I'm a full stack developer with an expansive background. My
+						passions range from anime, Iron Man competitions, to microbrews.
 					</p>
 				</article>
 
